fix dark mode

--- a/client/src/Components/NavBar/NavBar.scss
+++ b/client/src/Components/NavBar/NavBar.scss
@@ -5,10 +5,6 @@
   width: 60%;
 }
 
-.darkTest {
-  background-color: black;
-}
-
 .darkModeToggle {
   background-color: transparent;
   border: none;
@@ -30,3 +26,6 @@
   width: 70px;
 }
 
+// .dark .navbar {
+//   background-color: black;
+// }
